Se agregó archivos para el manejo de admin,validacion,ong y adjunto + actualizacion de code